frontend/tests/cases/negative/duplicateInstance.gr
interface Simple a

data A = A

-- duplicate instance for a type
instance Simple A

instance Simple A
